--- a/ProyectoDesarrollo/src/Vista/GUI.fxml
+++ b/ProyectoDesarrollo/src/Vista/GUI.fxml
@@ -1,20 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.effect.*?>
 <?import java.lang.*?>
-<?import java.net.*?>
-<?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="ventanaPrincipal" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="617.0" prefWidth="1028.0" style="-fx-background-color: #76a2cb;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.GUIController">
+<AnchorPane id="AnchorPane" fx:id="ventanaPrincipal" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="617.0" prefWidth="1022.0" style="-fx-background-color: #76a2cb;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.GUIController">
    <children>
-      <Pane fx:id="panelPrincipal" layoutX="-3.0" prefHeight="617.0" prefWidth="1028.0" style="-fx-background-color: #76a2cb;" visible="false" AnchorPane.leftAnchor="-3.0">
+      <Pane fx:id="panelPrincipal" layoutX="-3.0" prefHeight="617.0" prefWidth="1024.0" style="-fx-background-color: #76a2cb;" visible="false" AnchorPane.leftAnchor="-3.0">
          <children>
             <Button fx:id="bCerrar" layoutX="925.0" layoutY="14.0" mnemonicParsing="false" onAction="#cerrar" prefHeight="28.0" prefWidth="89.0" style="-fx-background-color: #FFFFFF;" text="Cerrar" textFill="#76a2cb">
                <cursor>
@@ -158,22 +174,46 @@
                               <Cursor fx:constant="HAND" />
                            </cursor>
                         </Button>
+                        <Button fx:id="boton_orden" alignment="BASELINE_CENTER" layoutY="301.0" mnemonicParsing="false" onAction="#botonOrdenes" prefHeight="45.0" prefWidth="217.0" style="-fx-background-color: #808080;" text="   Órdenes de trabajo" textFill="WHITE">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                           <font>
+                              <Font name="Verdana" size="14.0" />
+                           </font>
+                        </Button>
+                        <Button fx:id="boton_venta" alignment="BASELINE_CENTER" layoutY="346.0" mnemonicParsing="false" onAction="#botonVentas" prefHeight="45.0" prefWidth="217.0" style="-fx-background-color: #808080;" text="Ventas" textFill="WHITE">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                           <font>
+                              <Font name="Verdana" size="14.0" />
+                           </font>
+                        </Button>
+                        <Button fx:id="boton_cerrar" alignment="BASELINE_CENTER" layoutY="391.0" mnemonicParsing="false" onAction="#cerrar" prefHeight="45.0" prefWidth="217.0" style="-fx-background-color: #808080;" text="Cerrar" textFill="WHITE">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                           <font>
+                              <Font name="Verdana" size="14.0" />
+                           </font>
+                        </Button>
                         <AnchorPane layoutX="-1.0" prefHeight="609.0" prefWidth="31.0" style="-fx-background-color: #76A2CB;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-1.0" AnchorPane.topAnchor="0.0">
                            <effect>
                               <DropShadow />
                            </effect>
                            <children>
-                              <ImageView fitHeight="18.0" fitWidth="18.0" layoutX="7.0" layoutY="91.0">
+                              <ImageView fitHeight="18.0" fitWidth="18.0" layoutX="7.0" layoutY="90.0">
                                  <image>
                                     <Image url="@../Recursos/inicio.png" />
                                  </image>
                               </ImageView>
-                              <ImageView fitHeight="18.0" fitWidth="18.0" layoutX="7.0" layoutY="134.0">
+                              <ImageView fitHeight="18.0" fitWidth="18.0" layoutX="7.0" layoutY="135.0">
                                  <image>
                                     <Image url="@../Recursos/user.png" />
                                  </image>
                               </ImageView>
-                              <ImageView fitHeight="18.0" fitWidth="18.0" layoutX="7.0" layoutY="182.0">
+                              <ImageView fitHeight="18.0" fitWidth="18.0" layoutX="7.0" layoutY="180.0">
                                  <image>
                                     <Image url="@../Recursos/inventarioP.png" />
                                  </image>
@@ -183,7 +223,7 @@
                                     <Image url="@../Recursos/sede.png" />
                                  </image>
                               </ImageView>
-                              <ImageView fitHeight="18.0" fitWidth="18.0" layoutX="7.0" layoutY="271.0">
+                              <ImageView fitHeight="18.0" fitWidth="18.0" layoutX="7.0" layoutY="270.0">
                                  <image>
                                     <Image url="@../Recursos/reporte.png" />
                                  </image>
@@ -199,57 +239,13 @@
             </Pane>
             <Pane fx:id="panelContenedor" prefHeight="617.0" prefWidth="806.0">
                <children>
-                  <Pane fx:id="panelInicio" layoutX="6.0" layoutY="1.0" prefHeight="623.0" prefWidth="806.0" style="-fx-background-color: #9E7FD6;" visible="false" />
-                  <Pane fx:id="panelUsuario" layoutX="3.0" prefHeight="617.0" prefWidth="806.0" style="-fx-background-color: #1AE3CD;" visible="false" />
-                  <Pane fx:id="panelInventario" prefHeight="617.0" prefWidth="812.0" style="-fx-background-color: #FFFFFF;">
-                     <children>
-                        <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="617.0" prefWidth="812.0">
-                           <children>
-                              <TabPane fx:id="tabPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="Infinity" prefWidth="Infinity" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                 <tabs>
-                                    <Tab text="Vehiculos">
-                                       <content>
-                                          <AnchorPane prefHeight="584.0" prefWidth="798.0">
-                                             <children>
-                                                <TableView fx:id="tvVehiculos" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="371.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                                   <columns>
-                                                      <TableColumn fx:id="tcVLinea" prefWidth="150.0" text="Línea" />
-                                                      <TableColumn fx:id="tcVMarca" prefWidth="75.0" text="Marca" />
-                                                      <TableColumn fx:id="tcVModelo" prefWidth="75.0" text="Modelo" />
-                                                      <TableColumn fx:id="tcVPrecio" prefWidth="75.0" text="Precio" />
-                                                      <TableColumn fx:id="tcVCantidad" prefWidth="75.0" text="Cantidad" />
-                                                   </columns>
-                                                </TableView>
-                                             </children>
-                                          </AnchorPane>
-                                       </content>
-                                    </Tab>
-                                    <Tab text="Repuestos">
-                                       <content>
-                                          <AnchorPane>
-                                             <children>
-                                                <TableView fx:id="tvRepuestos" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="371.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                                   <columns>
-                                                      <TableColumn fx:id="tcRLinea" prefWidth="150.0" text="Línea" />
-                                                      <TableColumn fx:id="tcRMarca" prefWidth="75.0" text="Marca" />
-                                                      <TableColumn fx:id="tcRModelo" prefWidth="75.0" text="Modelo" />
-                                                      <TableColumn fx:id="tcRPrecio" prefWidth="75.0" text="Precio" />
-                                                      <TableColumn fx:id="tcRCantidad" prefWidth="75.0" text="Cantidad" />
-                                                   </columns>
-                                                </TableView>
-                                             </children>
-                                          </AnchorPane>
-                                       </content>
-                                    </Tab>
-                                 </tabs>
-                              </TabPane>
-                              <Button fx:id="bActualizar" layoutX="457.0" layoutY="22.0" mnemonicParsing="false" onMouseClicked="#cargarInventario" prefHeight="25.0" prefWidth="75.0" text="Actualizar" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="2.0" />
-                           </children>
-                        </AnchorPane>
-                     </children>
-                  </Pane>
-                  <Pane fx:id="panelSedes" layoutX="2.0" layoutY="-1.0" prefHeight="617.0" prefWidth="806.0" style="-fx-background-color: #A01AE3;" visible="false" />
-                  <Pane fx:id="panelReportes" layoutX="2.0" layoutY="-2.0" prefHeight="623.0" prefWidth="806.0" style="-fx-background-color: #E31AD0;" visible="false" />
+                  <AnchorPane fx:id="panelInicio" prefHeight="617.0" prefWidth="806.0" style="-fx-background-color: #9E7FD6;" />
+                  <AnchorPane fx:id="panelUsuario" prefHeight="617.0" prefWidth="806.0" style="-fx-background-color: #1AE3CD;" visible="false" />
+                  <AnchorPane fx:id="panelInventario" prefHeight="617.0" prefWidth="806.0" style="-fx-background-color: #FFFFFF;" visible="false" />
+                  <AnchorPane fx:id="panelSedes" prefHeight="617.0" prefWidth="806.0" style="-fx-background-color: #A01AE3;" visible="false" />
+                  <AnchorPane fx:id="panelReportes" prefHeight="617.0" prefWidth="806.0" style="-fx-background-color: #E31AD0;" visible="false" />
+                  <AnchorPane fx:id="panelOrdenes" prefHeight="617.0" prefWidth="806.0" style="-fx-background-color: #58AFCD;" visible="false" />
+                  <AnchorPane fx:id="panelVentas" prefHeight="617.0" prefWidth="806.0" style="-fx-background-color: #4CC3E8;" visible="false" />
                </children>
             </Pane>
          </children>
