--- a/ProyectoDesarrollo/src/Vista/OrdenTrabajo.fxml
+++ b/ProyectoDesarrollo/src/Vista/OrdenTrabajo.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.effect.*?>
 <?import java.lang.*?>
@@ -12,7 +13,7 @@
    <children>
       <ScrollPane layoutX="50.0" layoutY="50.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="50.0">
         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="515.0" prefWidth="704.0">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="515.0" prefWidth="704.0" style="-fx-background-color: White;">
                <children>
                   <Label layoutX="14.0" layoutY="120.0" text="Identificación del encargado:">
                      <font>
@@ -44,13 +45,21 @@
                      </font>
                   </Label>
                   <ComboBox fx:id="cbRepuesto" layoutX="532.0" layoutY="172.0" prefWidth="150.0" />
-                  <Label layoutX="165.0" layoutY="37.0" prefHeight="40.0" prefWidth="375.0" style="-fx-background-color: #76A2CB;" text="  Nueva Orden de trabajo" textAlignment="CENTER" textFill="WHITE">
+                  <Label layoutX="188.0" layoutY="37.0" prefHeight="40.0" prefWidth="375.0" text="  Nueva Orden de trabajo" textAlignment="CENTER">
                      <font>
-                        <Font name="Verdana Bold" size="25.0" />
+                        <Font name="Verdana" size="25.0" />
                      </font>
                   </Label>
-                  <Button layoutX="607.0" layoutY="468.0" mnemonicParsing="false" onMouseClicked="#crearOrden" text="Crear orden" />
-                  <Button layoutX="496.0" layoutY="468.0" mnemonicParsing="false" onMouseClicked="#limpiarCampos" text="Limpiar campos" />
+                  <Button layoutX="598.0" layoutY="468.0" mnemonicParsing="false" onMouseClicked="#crearOrden" style="-fx-background-color: #66c00b;" text="Crear orden">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font></Button>
+                  <Button layoutX="482.0" layoutY="468.0" mnemonicParsing="false" onMouseClicked="#limpiarCampos" text="Limpiar campos" />
+                  <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="148.0" layoutY="37.0">
+                     <image>
+                        <Image url="@../Recursos/Orden_de_trabajo.png" />
+                     </image>
+                  </ImageView>
                </children>
             </AnchorPane>
         </content>
