--- a/ProyectoDesarrollo/src/Vista/GUI.fxml
+++ b/ProyectoDesarrollo/src/Vista/GUI.fxml
@@ -40,7 +40,7 @@
                   <Font name="Verdana Bold" size="14.0" />
                </font>
             </Button>
-            <Pane fx:id="panelBienvenida" layoutX="69.0" layoutY="47.0" prefHeight="515.0" prefWidth="890.0" style="-fx-background-color: #FFFFFF;">
+            <Pane fx:id="panelBienvenida" layoutX="69.0" layoutY="47.0" prefHeight="515.0" prefWidth="890.0" style="-fx-background-color: #FFFFFF;" visible="false">
                <children>
                    
                         <Label layoutX="296.0" layoutY="59.0" prefHeight="80.0" prefWidth="368.0" style="-fx-background-color: #76a2cb;" text="   Le damos la bienvenida " textFill="WHITE">
@@ -68,7 +68,7 @@
                   </Button>
                </children>
             </Pane>
-            <GridPane fx:id="panelIngreso" gridLinesVisible="true" layoutX="69.0" layoutY="53.0" maxHeight="515.0" maxWidth="890.0" minHeight="515.0" minWidth="668.0" prefHeight="515.0" prefWidth="890.0" visible="false">
+            <GridPane fx:id="panelIngreso" gridLinesVisible="true" layoutX="69.0" layoutY="53.0" maxHeight="515.0" maxWidth="890.0" minHeight="515.0" minWidth="668.0" prefHeight="515.0" prefWidth="890.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="559.0" minWidth="10.0" prefWidth="546.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="490.0" minWidth="10.0" prefWidth="344.0" />
@@ -84,22 +84,32 @@
                               <Font name="Verdana Bold" size="14.0" />
                            </font>
                         </Label>
+                        <TextField fx:id="tCedula" layoutX="44.0" layoutY="133.0" onKeyPressed="#verificacionTeclasEspeciales" onKeyTyped="#verificacionEntradaNumerica" promptText="Ingrese su cédula">
+                           <font>
+                              <Font name="Verdana" size="13.0" />
+                           </font>
+                        </TextField>
                         <Label layoutX="44.0" layoutY="282.0" prefHeight="17.0" prefWidth="117.0" style="-fx-background-color: #76a2cb;" text=" Contraseña" textFill="WHITE">
                            <font>
                               <Font name="Verdana Bold" size="14.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="tCedula" layoutX="44.0" layoutY="133.0" promptText="Ingrese su cédula">
-                           <font>
-                              <Font name="Verdana" size="13.0" />
-                           </font>
-                        </TextField>
                         <PasswordField fx:id="tContrasena" layoutX="44.0" layoutY="300.0" prefHeight="25.0" prefWidth="170.0" promptText="Ingrese su contraseña">
                            <font>
                               <Font name="Verdana" size="13.0" />
                            </font>
                         </PasswordField>
-                        <Button fx:id="bIngresar" layoutX="95.0" layoutY="410.0" mnemonicParsing="false" onAction="#ingresar" prefHeight="28.0" prefWidth="89.0" style="-fx-background-color: #76a2cb;" text="Ingresar" textFill="WHITE">
+                        <TextField fx:id="tAuxContrasena" layoutX="44.0" layoutY="300.0" prefHeight="25.0" prefWidth="170.0" promptText="Ingrese su contraseña" visible="false">
+                           <font>
+                              <Font name="Verdana" size="13.0" />
+                           </font>
+                        </TextField>
+                        <CheckBox fx:id="cbContrasena" layoutX="222.0" layoutY="304.0" mnemonicParsing="false" onAction="#activarContrasena" prefHeight="18.0" prefWidth="0.0">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </CheckBox>
+                        <Button fx:id="bIngresar" layoutX="95.0" layoutY="410.0" mnemonicParsing="false" onAction="#verificarLogin" prefHeight="28.0" prefWidth="89.0" style="-fx-background-color: #76a2cb;" text="Ingresar" textFill="WHITE">
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor>
@@ -107,16 +117,6 @@
                               <Font name="Verdana Bold" size="14.0" />
                            </font>
                         </Button>
-                        <CheckBox fx:id="cbContrasena" layoutX="222.0" layoutY="304.0" mnemonicParsing="false" onAction="#activarContrasena" prefHeight="18.0" prefWidth="0.0">
-                           <cursor>
-                              <Cursor fx:constant="HAND" />
-                           </cursor>
-                        </CheckBox>
-                        <TextField fx:id="tAuxContrasena" editable="false" layoutX="44.0" layoutY="300.0" prefHeight="25.0" prefWidth="170.0" visible="false">
-                           <font>
-                              <Font name="Verdana" size="13.0" />
-                           </font>
-                        </TextField>
                      </children>
                   </Pane>
                   <ImageView fitHeight="517.0" fitWidth="545.0" pickOnBounds="true" preserveRatio="true">
