--- a/ProyectoDesarrollo/src/Vista/Usuario.fxml
+++ b/ProyectoDesarrollo/src/Vista/Usuario.fxml
@@ -9,11 +9,11 @@
 
 <AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="617.0" prefWidth="806.0" style="-fx-background-color: C4DCF2;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.ControladorUsuario">
    <children>
-      <TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="Infinity" prefWidth="Infinity" style="-fx-background-color: WHITE;" tabClosingPolicy="UNAVAILABLE">
+      <TabPane layoutX="-3.0" layoutY="-1.0" prefHeight="620.0" prefWidth="812.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-          <Tab text="Crear Usuario">
+            <Tab text="Crear Usuario">
                <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="507.0" prefWidth="779.0">
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="507.0" prefWidth="779.0">
                      <children>
                         <Label layoutX="76.0" layoutY="26.0" prefHeight="29.0" prefWidth="112.0" text="Nombre(s)">
                            <font>
@@ -58,20 +58,20 @@
                         <TextField fx:id="tApellidoUsuario" layoutX="474.0" layoutY="59.0" prefHeight="25.0" prefWidth="255.0" />
                         <TextField fx:id="tNombreUsuario" layoutX="76.0" layoutY="59.0" prefHeight="25.0" prefWidth="255.0" />
                         <Button fx:id="bCrearUsuario" layoutX="401.0" layoutY="441.0" mnemonicParsing="false" onAction="#crearUsuario" prefHeight="33.0" prefWidth="147.0" style="-fx-background-color: #76A2CB;" text="Crear Usuario" textFill="WHITE">
-                           <font>
-                              <Font name="Verdana Bold" size="14.0" />
-                           </font>
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor>
+                           <font>
+                              <Font name="Verdana Bold" size="14.0" />
+                           </font>
                         </Button>
                         <Button fx:id="bLimpiarCampos" layoutX="240.0" layoutY="441.0" mnemonicParsing="false" onAction="#limpiarCampos" prefHeight="33.0" prefWidth="147.0" style="-fx-background-color: #76A2CB;" text="Limpiar Campos" textFill="WHITE">
-                           <font>
-                              <Font name="Verdana Bold" size="14.0" />
-                           </font>
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor>
+                           <font>
+                              <Font name="Verdana Bold" size="14.0" />
+                           </font>
                         </Button>
                         <TextField fx:id="tSedeUsuario" layoutX="474.0" layoutY="297.0" prefHeight="25.0" prefWidth="255.0" />
                         <Label layoutX="474.0" layoutY="268.0" prefHeight="29.0" prefWidth="112.0" text="Sede">
@@ -88,10 +88,10 @@
                      </children>
                   </AnchorPane>
                </content>
-          </Tab>
-          <Tab text="Modificar Usuario">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+            </Tab>
+            <Tab text="Modificar Usuario">
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
                         <Pane layoutY="-2.0" prefHeight="149.0" prefWidth="760.0" style="-fx-background-color: C4DCF2;">
                            <children>
@@ -100,71 +100,88 @@
                                     <Font name="Verdana" size="14.0" />
                                  </font>
                               </Label>
-                              <TextField fx:id="tCedulaM" layoutX="298.0" layoutY="62.0" prefHeight="25.0" prefWidth="165.0" />
                               <Button fx:id="bBuscarUsuario" layoutX="530.0" layoutY="61.0" mnemonicParsing="false" onAction="#buscarUsuario" prefHeight="28.0" prefWidth="139.0" style="-fx-background-color: #76A2CB;" text="Buscar Usuario" textFill="WHITE">
                                  <font>
                                     <Font name="Verdana Bold" size="14.0" />
                                  </font>
                               </Button>
+                              <ComboBox fx:id="cbCedula" layoutX="244.0" layoutY="62.0" prefWidth="255.0" promptText="Elija la cédula del empleado" />
                            </children>
                         </Pane>
-                        <Button fx:id="bModificarUsuario" layoutX="300.0" layoutY="454.0" mnemonicParsing="false" onAction="#modificarUsuario" prefHeight="33.0" prefWidth="161.0" style="-fx-background-color: #76A2CB;" text="Modificar Usuario" textFill="WHITE">
+                        <Button fx:id="bModificarUsuario" layoutX="415.0" layoutY="515.0" mnemonicParsing="false" onAction="#modificarUsuario" prefHeight="33.0" prefWidth="161.0" style="-fx-background-color: #76A2CB;" text="Modificar Usuario" textFill="WHITE">
+                           <font>
+                              <Font name="Verdana Bold" size="14.0" />
+                           </font>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Button>
+                        <TextField fx:id="tCorreoUsuarioM" layoutX="448.0" layoutY="242.0" prefHeight="25.0" prefWidth="255.0" />
+                        <TextField fx:id="tApellidoUsuarioM" layoutX="448.0" layoutY="177.0" prefHeight="25.0" prefWidth="255.0" />
+                        <TextField fx:id="tRolUsuarioM" layoutX="59.0" layoutY="242.0" prefHeight="25.0" prefWidth="255.0" />
+                        <TextField fx:id="tNombreUsuarioM" layoutX="59.0" layoutY="177.0" prefHeight="25.0" prefWidth="255.0" />
+                        <TextField fx:id="tTelefonoUsuarioM" layoutX="59.0" layoutY="312.0" prefHeight="25.0" prefWidth="255.0" />
+                        <TextField fx:id="tDireccionUsuarioM" layoutX="448.0" layoutY="312.0" prefHeight="25.0" prefWidth="255.0" />
+                        <Label layoutX="448.0" layoutY="147.0" prefHeight="32.0" prefWidth="112.0" text="Apellido(s)">
+                           <font>
+                              <Font name="Verdana" size="14.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="448.0" layoutY="283.0" prefHeight="29.0" prefWidth="112.0" text="Dirección">
+                           <font>
+                              <Font name="Verdana" size="14.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="59.0" layoutY="283.0" prefHeight="29.0" prefWidth="112.0" text="Teléfono">
+                           <font>
+                              <Font name="Verdana" size="14.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="59.0" layoutY="217.0" prefHeight="29.0" prefWidth="112.0" text="Rol">
+                           <font>
+                              <Font name="Verdana" size="14.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="448.0" layoutY="217.0" prefHeight="29.0" prefWidth="112.0" text="Correo">
+                           <font>
+                              <Font name="Verdana" size="14.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="59.0" layoutY="148.0" prefHeight="29.0" prefWidth="112.0" text="Nombre(s)">
+                           <font>
+                              <Font name="Verdana" size="14.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="59.0" layoutY="355.0" prefHeight="29.0" prefWidth="112.0" text="Sede">
+                           <font>
+                              <Font name="Verdana" size="14.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="tSedeUsuarioM" layoutX="59.0" layoutY="384.0" prefHeight="25.0" prefWidth="255.0" />
+                        <Label layoutX="448.0" layoutY="355.0" prefHeight="29.0" prefWidth="112.0" text="Contraseña">
+                           <font>
+                              <Font name="Verdana" size="14.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="tContrasenaUsuarioM" layoutX="448.0" layoutY="384.0" prefHeight="25.0" prefWidth="255.0" />
+                        <Label layoutX="279.0" layoutY="438.0" prefHeight="29.0" prefWidth="112.0" text="Estado">
+                           <font>
+                              <Font name="Verdana" size="14.0" />
+                           </font>
+                        </Label>
+                        <ComboBox fx:id="cbEstado" layoutX="279.0" layoutY="467.0" prefWidth="255.0" promptText="Elija el estado de su empleado" visibleRowCount="2" />
+                        <Button fx:id="bLimpiarCamposM" layoutX="233.0" layoutY="515.0" mnemonicParsing="false" onAction="#limpiarCamposM" prefHeight="33.0" prefWidth="147.0" style="-fx-background-color: #76A2CB;" text="Limpiar Campos" textFill="WHITE">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
                            <font>
                               <Font name="Verdana Bold" size="14.0" />
                            </font>
                         </Button>
-                        <TextField fx:id="tCorreoUsuarioM" layoutX="453.0" layoutY="256.0" prefHeight="25.0" prefWidth="255.0" />
-                        <TextField fx:id="tApellidoUsuarioM" layoutX="453.0" layoutY="191.0" prefHeight="25.0" prefWidth="255.0" />
-                        <TextField fx:id="tRolUsuarioM" layoutX="64.0" layoutY="256.0" prefHeight="25.0" prefWidth="255.0" />
-                        <TextField fx:id="tNombreUsuarioM" layoutX="64.0" layoutY="191.0" prefHeight="25.0" prefWidth="255.0" />
-                        <TextField fx:id="tTelefonoUsuarioM" layoutX="64.0" layoutY="326.0" prefHeight="25.0" prefWidth="255.0" />
-                        <TextField fx:id="tDireccionUsuarioM" layoutX="453.0" layoutY="326.0" prefHeight="25.0" prefWidth="255.0" />
-                        <Label layoutX="453.0" layoutY="161.0" prefHeight="32.0" prefWidth="112.0" text="Apellido(s)">
-                           <font>
-                              <Font name="Verdana" size="14.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="453.0" layoutY="297.0" prefHeight="29.0" prefWidth="112.0" text="Dirección">
-                           <font>
-                              <Font name="Verdana" size="14.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="64.0" layoutY="297.0" prefHeight="29.0" prefWidth="112.0" text="Teléfono">
-                           <font>
-                              <Font name="Verdana" size="14.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="64.0" layoutY="231.0" prefHeight="29.0" prefWidth="112.0" text="Rol">
-                           <font>
-                              <Font name="Verdana" size="14.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="453.0" layoutY="231.0" prefHeight="29.0" prefWidth="112.0" text="Correo">
-                           <font>
-                              <Font name="Verdana" size="14.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="64.0" layoutY="162.0" prefHeight="29.0" prefWidth="112.0" text="Nombre(s)">
-                           <font>
-                              <Font name="Verdana" size="14.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="64.0" layoutY="369.0" prefHeight="29.0" prefWidth="112.0" text="Sede">
-                           <font>
-                              <Font name="Verdana" size="14.0" />
-                           </font>
-                        </Label>
-                        <TextField fx:id="tSedeUsuarioM" layoutX="64.0" layoutY="398.0" prefHeight="25.0" prefWidth="255.0" />
-                        <Label layoutX="453.0" layoutY="369.0" prefHeight="29.0" prefWidth="112.0" text="Contraseña">
-                           <font>
-                              <Font name="Verdana" size="14.0" />
-                           </font>
-                        </Label>
-                        <TextField fx:id="tContrasenaUsuarioM" layoutX="453.0" layoutY="398.0" prefHeight="25.0" prefWidth="255.0" />
                      </children>
                   </AnchorPane>
-            </content>
-          </Tab>
+               </content>
+            </Tab>
         </tabs>
       </TabPane>
    </children>
